# chromium.nano

./: .gitattributes  .gitignore  README.md  REMOVAL.md  build.bat  build.py  build.sh
src/: .landmines  BUILD.gn
src/android_webview/: BUILD.gn
src/android_webview/browser/: BUILD.gn  aw_browser_context.cc  aw_browser_main_parts.cc  aw_browser_process.cc  aw_browser_process.h  aw_content_browser_client.cc  aw_content_browser_client.h  aw_content_browser_client_receiver_bindings.cc  aw_contents.cc  aw_contents.h  aw_contents_client_bridge.cc  aw_contents_client_bridge.h  aw_contents_io_thread_client.cc  aw_contents_io_thread_client.h  aw_contents_statics.cc  aw_feature_list_creator.cc  aw_feature_list_creator.h  aw_feature_map.cc  aw_field_trials.cc  aw_web_ui_controller_factory.cc
src/android_webview/glue/: BUILD.gn
src/android_webview/lib/: BUILD.gn  aw_main_delegate.cc
src/android_webview/renderer/: BUILD.gn  aw_content_renderer_client.cc  aw_content_renderer_client.h  aw_url_loader_throttle_provider.cc  aw_url_loader_throttle_provider.h
src/android_webview/test/: BUILD.gn  shared.gni
src/android_webview/tools/: run_cts.pydeps
src/base/: BUILD.gn
src/base/test/: BUILD.gn
src/base/threading/: thread_restrictions.h
src/build_overrides/: tint.gni
src/buildtools/linux64/: clang-format
src/buildtools/reclient_cfgs/: reproxy.cfg
src/chrome/: BUILD.gn  chrome_paks.gni
src/chrome/android/: BUILD.gn  chrome_java_sources.gni  chrome_junit_test_java_sources.gni  chrome_test_java_sources.gni
src/chrome/app/: BUILD.gn  chrome_exe_main_win.cc  chrome_main_delegate.cc  generated_resources.grd
src/chrome/browser/: BUILD.gn  about_flags.cc  browser_process.h  browser_process_impl.cc  browser_process_impl.h  browser_resources.grd  certificate_manager_model.cc  certificate_manager_model_ash_browsertest.cc  certificate_manager_model_lacros_browsertest.cc  chrome_browser_interface_binders.cc  chrome_browser_main.cc  chrome_browser_main.h  chrome_browser_main_extra_parts_nacl_deprecation.cc  chrome_browser_main_linux.cc  chrome_browser_main_win.cc  chrome_browser_main_win.h  chrome_content_browser_client.cc  chrome_content_browser_client.h  chrome_content_browser_client_binder_policies.cc  chrome_content_browser_client_receiver_bindings.cc  chrome_service_worker_browsertest.cc  file_select_helper.cc  file_select_helper.h  flag_descriptions.cc  flag_descriptions.h  memory_details.cc  shell_integration.cc  shell_integration_win.cc  startup_data.cc  startup_data.h
src/chrome/common/: BUILD.gn  all_messages.h  chrome_content_client.cc  chrome_content_client.h  chrome_features.cc  chrome_features.h  chrome_paths.cc  chrome_switches.cc  chrome_switches.h  common_message_generator.cc  common_message_generator.h  features.gni  pref_names.h  url_constants.h  webui_url_constants.cc
src/chrome/install_static/: BUILD.gn  install_util.cc
src/chrome/renderer/: BUILD.gn  chrome_content_renderer_client.cc  chrome_content_renderer_client.h  chrome_render_frame_observer.cc  chrome_render_frame_observer.h
src/chrome/test/: BUILD.gn
src/chrome/updater/: BUILD.gn  configurator.cc
src/chrome/utility/: BUILD.gn  services.cc
src/components/: BUILD.gn  components_strings.grd
src/components/attribution_reporting/: BUILD.gn
src/components/blocked_content/: BUILD.gn  popup_blocker.cc  popup_blocker_tab_helper.cc  popup_tracker.cc  popup_tracker.h
src/components/browsing_topics/: BUILD.gn  annotator.h  annotator_impl.h  browsing_topics_service_impl.cc
src/components/component_updater/: component_updater_service.h
src/components/desks_storage/: BUILD.gn
src/components/embedder_support/: BUILD.gn  user_agent_utils.cc  user_agent_utils.h
src/components/exo/: shell_surface_base.cc
src/components/ip_protection/: BUILD.gn
src/components/media_effects/: BUILD.gn
src/components/nacl/: features.gni
src/components/named_mojo_ipc_server/: BUILD.gn
src/components/optimization_guide/: BUILD.gn  features.gni
src/components/page_info/: BUILD.gn  page_info.cc  page_info.h  page_info_delegate.h  page_info_ui.cc  page_info_ui.h
src/components/permissions/: permissions_client.h
src/components/proxy_config/: BUILD.gn
src/components/renderer_context_menu/: BUILD.gn  render_view_context_menu_base.cc  render_view_context_menu_base.h
src/components/resources/: BUILD.gn  components_resources.grd
src/components/search_engines/: BUILD.gn
src/components/strings/: BUILD.gn
src/components/sync/: BUILD.gn
src/components/sync_preferences/: BUILD.gn  common_syncable_prefs_database.cc  pref_service_syncable_factory.cc  pref_service_syncable_factory.h
src/components/test/: BUILD.gn
src/components/update_client/: BUILD.gn  component.cc  test_configurator.h
src/components/url_formatter/: BUILD.gn
src/components/user_manager/: user.h
src/components/zucchini/: BUILD.gn
src/content/: BUILD.gn
src/content/app/: BUILD.gn  content_main_runner_impl.cc
src/content/browser/: BUILD.gn  browser_main_loop.cc  child_process_launcher_helper.h  child_process_launcher_helper_mac.cc  plugin_list.h  plugin_service_impl.cc  plugin_service_impl.h  plugin_service_impl_browsertest.cc  sandbox_parameters_mac.h  sandbox_parameters_mac.mm  storage_partition_impl.cc  utility_process_sandbox_browsertest.cc  utility_sandbox_delegate.cc
src/content/child/: BUILD.gn  font_warmup_win.cc
src/content/common/: BUILD.gn  all_messages.h  features.gni
src/content/renderer/: BUILD.gn  render_frame_impl.cc  render_frame_impl.h  render_thread_impl.cc  renderer_blink_platform_impl.cc  renderer_main.cc
src/content/shell/: BUILD.gn
src/content/test/: BUILD.gn
src/content/utility/: BUILD.gn
src/crypto/: BUILD.gn  nss_util.h  nss_util_internal.h
src/extensions/: BUILD.gn
src/gpu/: BUILD.gn
src/gpu/config/: BUILD.gn  (+3 more)
src/headless/: BUILD.gn
src/ipc/: BUILD.gn
src/media/: BUILD.gn  media_options.gni
src/net/: BUILD.gn
src/pdf/: BUILD.gn  features.gni
src/skia/: BUILD.gn  features.gni
src/sql/: BUILD.gn
src/testing/: BUILD.gn  location_tags.json  test.gni
src/url/: BUILD.gn
(+993 files in other folders)
