# Copyright 2017 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/cast.gni")
import("//build/config/chromeos/ui_mode.gni")
import("//build/config/chromeos/ui_mode.gni")
import("//chrome/version.gni")

declare_args() {
  # Should ANGLE be linked statically?
  use_static_angle = is_android || is_ios

  # Should EGL support be compiled?
  # Can be overriden to test during bring up of EGL support on other platforms.
  use_egl =
      is_win || is_android || is_linux || is_chromeos || is_fuchsia || is_apple

  # Should Dawn support be compiled to back the WebGPU implementation?
  # Also controls linking Dawn dependencies in such as SPIRV-Tools/SPIRV-Cross.
  use_dawn = false

  # Should Dawn test binaries (unittests, end2end_tests, perf_tests) be built?
  # Independent of use_dawn, which controls whether Dawn is used in Chromium.
  build_dawn_tests = false

  enable_validating_command_decoder = is_android
}

declare_args() {
  enable_swiftshader = false
}
