# Copyright 2015 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("managed") {
  sources = [
    "managed_bookmark_service.cc",
    "managed_bookmark_service.h",
    "managed_bookmark_util.cc",
    "managed_bookmark_util.h",
    "managed_bookmarks_tracker.cc",
    "managed_bookmarks_tracker.h",
  ]

  deps = [
    "//base",
    "//components/bookmarks/browser",
    "//components/bookmarks/common",
    "//components/keyed_service/core",
    "//components/prefs",
    "//components/strings",
    "//components/url_formatter",
    "//ui/base",
    "//url",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "managed_bookmarks_policy_handler_unittest.cc",
    "managed_bookmarks_tracker_unittest.cc",
  ]

  deps = [
    ":managed",
    "//base",
    "//base/test:test_support",
    "//components/bookmarks/browser",
    "//components/bookmarks/common",
    "//components/bookmarks/test",
    "//components/prefs:test_support",
    "//components/strings",
    "//testing/gmock",
    "//testing/gtest",
    "//ui/base",
    "//url",
  ]
}
