# Copyright 2014 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

action_foreach("registry_controlled_domains") {
  script = "//net/tools/dafsa/make_dafsa.py"
  sources = [
    "effective_tld_names.gperf",
  ]
  outputs = [ "${target_gen_dir}/{{source_name_part}}-reversed-inc.cc" ]
  args = [
    "--reverse",
    "{{source}}",
    rebase_path("${target_gen_dir}/{{source_name_part}}-reversed-inc.cc",
                root_build_dir),
  ]
}

action_foreach("lookup_strings_test_sets") {
  script = "//net/tools/dafsa/make_dafsa.py"
  sources = [
    "effective_tld_names.gperf",
  ]
  outputs = [ "${target_gen_dir}/{{source_name_part}}-inc.cc" ]
  args = [
    "{{source}}",
    rebase_path("${target_gen_dir}/{{source_name_part}}-inc.cc",
                root_build_dir),
  ]
}
