# Copyright 2021 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
  grd_prefix = "connectors_internals"

  static_files = [ "index.html" ]

  web_component_files = [
    "app.ts",
    "connectors_tabs.ts",
    "device_trust_connector.ts",
    "managed_client_certificate.ts",
  ]

  non_web_component_files = [
    "browser_proxy.ts",
    "connectors_utils.ts",
  ]

  html_to_wrapper_template = "native"

  ts_deps = [
    "//ui/webui/resources/js:build_ts",
    "//ui/webui/resources/mojo:build_ts",
  ]
  webui_context_type = "trusted"
}
