# Copyright 2019 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//extensions/buildflags/buildflags.gni")

assert(enable_extensions)

source_set("support") {
  testonly = true
  sources = [
    "converter.cc",
    "converter.h",
  ]
  deps = [
    "//base",
    "//extensions/browser",
    "//extensions/common",
    "//extensions/common:test_support",
    "//extensions/common/api:api",
    "//url",
  ]
}

executable("filter_list_converter") {
  testonly = true
  sources = [ "main.cc" ]
  deps = [
    ":support",
    "//base",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [ "converter_unittest.cc" ]
  deps = [
    ":support",
    "//base",
    "//testing/gtest",
  ]
}
